src/test/ui/parser/block-no-opening-brace.stderr
error: expected `{`, found keyword `let`
  --> $DIR/block-no-opening-brace.rs:9:9
   |
LL |         let x = 0;
   |         ^^^-------
   |         |
   |         expected `{`
   |         help: try placing this code inside a block: `{ let x = 0; }`

error: expected `{`, found keyword `let`
  --> $DIR/block-no-opening-brace.rs:15:9
   |
LL |         let x = 0;
   |         ^^^-------
   |         |
   |         expected `{`
   |         help: try placing this code inside a block: `{ let x = 0; }`

error: expected `{`, found keyword `let`
  --> $DIR/block-no-opening-brace.rs:20:9
   |
LL |         let x = 0;
   |         ^^^-------
   |         |
   |         expected `{`
   |         help: try placing this code inside a block: `{ let x = 0; }`

error: expected expression, found reserved keyword `try`
  --> $DIR/block-no-opening-brace.rs:24:5
   |
LL |     try
   |     ^^^ expected expression

error: expected one of `move`, `|`, or `||`, found keyword `let`
  --> $DIR/block-no-opening-brace.rs:30:9
   |
LL |     async
   |          - expected one of `move`, `|`, or `||`
LL |         let x = 0;
   |         ^^^ unexpected token

error: aborting due to 5 previous errors

